--- a/templates/registration.html
+++ b/templates/registration.html
@@ -37,7 +37,7 @@
                             <i class="fas fa-user fa-lg me-3 fa-fw"></i>
                             <div class="form-outline flex-fill mb-0">
                               <input type="text" id="form3Example1c" name="username" class="form-control" />
-                              <label class="form-label" for="form3Example1c">Your Name</label>
+                              <label class="form-label" for="form3Example1c">Your login</label>
                             </div>
                           </div>
 
