--- a/static/css/main.css
+++ b/static/css/main.css
@@ -1,11 +1,50 @@
 body{
     background-color: #2F3336;
     color: aliceblue;
-}
 
+}
+h2{
+    color: aliceblue;
+    text-align: center;
+}
+a{
+    text-decoration: none;
+    color: rgb(0, 86, 152);
+}
 /* #boards {
     background-color: green;
 } */
 .empty-space{
+    background-color: rgb(0, 65, 135);
     height: 50px;
+    text-align: center;
+}
+
+.card{
+    min-height: 60px;
+    min-width: 100px;
+    margin: 3px;
+}
+#add_button{
+    background-color: #2F3336;
+    color: aliceblue;
+    border-radius: 10px;
+}
+textarea{
+    min-height: 60px;
+    min-width: 100px;
+}
+button{
+    background-color: #2F3336;
+    color: aliceblue;
+    border-radius: 10px;
+    margin-top: 5px;
+}
+input:disabled{
+    color: black;
+    background-color: white;
+}
+input{
+    height: 60px;
+    width: 410px;
 }
