--- a/templates/body.html
+++ b/templates/body.html
@@ -1,39 +1,53 @@
-<link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='css/main.css') }}">
-<script src="static\js\controller\control_drag.js"></script>
-<div class="accordion " id="accordionFlushExample">
-    <div class="accordion-item">
-        <h2 class="accordion-header" id="flush-headingOne">
-            <button class="accordion-button collapsed bg  bg-dark text-light" type="button" data-bs-toggle="collapse"
-                data-bs-target="#flush-collapseOne" aria-expanded="false" aria-controls="flush-collapseOne">
-                Board 1
-            </button>
-        </h2>
-        <div id="flush-collapseOne" class="accordion-collapse collapse bg bg-dark " aria-labelledby="flush-headingOne"
-            data-bs-parent="#accordionFlushExample">
-            <div class="accordion-body">
-                <table class="table table-bordered ">
-                    <thead>
-                        <tr>
-                            <th class="text-light col-sm-3" scope="col">NEW</th>
-                            <th class="text-light col-sm-3" scope="col">IN PROGRESS</th>
-                            <th class="text-light col-sm-3" scope="col">TESTING</th>
-                            <th class="text-light col-sm-3" scope="col">DONE</th>
-                        </tr>
-                    </thead>
-                    <tbody>
-                        <tr >
-                            <td class="card-slot"><div class="card" draggable="true">
-                            <p>d</p>
-                            </div></td>
-                            <td class="card-slot"></td>
-                            <td class="card-slot"></td>
-                            <td class="card-slot"></td>
-                        </tr>
+<!DOCTYPE html>
+<html lang="en">
+    <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <meta http-equiv="X-UA-Compatible" content="ie=edge">
+        <title>ProMan </title>
+        <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='css/main.css') }}">
+        <link rel="shortcut icon" href="{{ url_for('static', filename='favicon/favicon.ico') }}">
+        <link rel="icon" type="image/png" sizes="32x32" href="{{ url_for('static', filename='favicon/favicon-32x32.png') }}">
+        <link rel="icon" type="image/png" sizes="96x96" href="{{ url_for('static', filename='favicon/favicon-96x96.png') }}">
+        <link rel="icon" type="image/png" sizes="16x16" href="{{ url_for('static', filename='favicon/favicon-16x16.png') }}">
+        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3" crossorigin="anonymous"></script>
+        <script type="module" src="{{ url_for('static', filename='js/main.js') }}" defer></script>
+    </head>
+    <body class="bg bg-dark">
 
-                </table>
-            </div>
-        </div>
-    </div>
+    {% include 'navbar.html' %}
+    <div class="empty-space"></div>
 
-</div>
-</div>
+            <h2 >
+                    {{name_board}} 
+            </h2>
+
+                    <button id="add_button">Add Note</button>
+                    <table class="table table-bordered ">
+                        <thead>
+                            <tr>
+                                <th class="text-light col-sm-3" scope="col">NEW</th>
+                                <th class="text-light col-sm-3" scope="col">IN PROGRESS</th>
+                                <th class="text-light col-sm-3" scope="col">TESTING</th>
+                                <th class="text-light col-sm-3" scope="col">DONE</th>
+                            </tr>
+                        </thead>
+                        <tbody>
+                            <tr >
+                                <td class="card-slot NEW"></td>
+                                <td class="card-slot IP"></td>
+                                <td class="card-slot T"></td>
+                                <td class="card-slot DONE"></td>
+                            </tr>
+                            
+    
+                    </table>
+
+    </body>
+    <div id="board_id">{{board_id}}</div>
+
+<script src="{{ url_for('static', filename='js/controller/control_drag.js') }}" defer></script>
+<script src="{{ url_for('static', filename='js/controller/take_elements.js') }}" defer></script>
+
+</html>
