--- a/templates/login.html
+++ b/templates/login.html
@@ -29,9 +29,9 @@
                     <div class="row justify-content-center">
                       <div class="col-md-10 col-lg-6 col-xl-5 order-2 order-lg-1">
 
-                        <p class="text-center h1 fw-bold mb-5 mx-1 mx-md-4 mt-4">Register</p>
+                        <p class="text-center h1 fw-bold mb-5 mx-1 mx-md-4 mt-4">Sign In</p>
 
-                        <form class="mx-1 mx-md-4" action="{{ url_for('user_register') }}"method="post">
+                        <form class="mx-1 mx-md-4" action="{{ url_for('user_login') }}"method="post">
 
                           <div class="d-flex flex-row align-items-center mb-4">
                             <i class="fas fa-user fa-lg me-3 fa-fw"></i>
@@ -41,34 +41,21 @@
                             </div>
                           </div>
 
-                          <div class="d-flex flex-row align-items-center mb-4">
-                            <i class="fas fa-envelope fa-lg me-3 fa-fw"></i>
-                            <div class="form-outline flex-fill mb-0">
-                              <input type="email" id="form3Example3c" name="email" class="form-control" />
-                              <label class="form-label" for="form3Example3c">Your Email</label>
-                            </div>
-                          </div>
+
 
                           <div class="d-flex flex-row align-items-center mb-4">
                             <i class="fas fa-lock fa-lg me-3 fa-fw"></i>
                             <div class="form-outline flex-fill mb-0">
-                              <input type="password" id="form3Example4c" name="password1" class="form-control" />
+                              <input type="password" id="form3Example4c" name="password" class="form-control" />
                               <label class="form-label" for="form3Example4c">Password</label>
                             </div>
                           </div>
 
-                          <div class="d-flex flex-row align-items-center mb-4">
-                            <i class="fas fa-key fa-lg me-3 fa-fw"></i>
-                            <div class="form-outline flex-fill mb-0">
-                              <input type="password" id="form3Example4cd" name="password2" class="form-control" />
-                              <label class="form-label" for="form3Example4cd">Repeat your password</label>
-                            </div>
-                          </div>
 
 
 
                           <div class="d-flex justify-content-center mx-4 mb-3 mb-lg-4">
-                            <button type="submit" class="btn btn-primary btn-lg">Register</button>
+                            <button type="submit" class="btn btn-primary btn-lg">Login</button>
                           </div>
 
                         </form>
