--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -6,13 +6,30 @@
     </button>
     <div class="collapse navbar-collapse" id="navbarText">
       <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-        <li class="nav-item active">
-        <a class="nav-link" href="{{ url_for('user_register') }}">Register</a>
-      </li>
+        {% if session == {} %}
+          <li class="nav-item active">
+            <a class="nav-link" href="{{ url_for('user_register') }}">Register</a>
+
+            </li>
+          <li class="nav-item active">
+                <a class="nav-link" href="{{ url_for('user_login') }}">Login</a>
+          </li>
+        {% endif %}
+          {% if session != {} %}
+          <li class="nav-item active">
+            <a class="nav-link" href="{{ url_for('user_logout') }}">Logout</a>
+          </li>
+          {% endif %}
       </ul>
-      <span class="navbar-text">
-          <a class="nav-link" href="#">Login</a>
-      </span>
+        {% if session != {} %}
+        <span class="navbar-text">
+              You're logged in as: {{ session['username'] }}
+        </span>
+        {% else %}
+        <span class="navbar-text">
+              You're not logged in.
+        </span>
+        {% endif %}
     </div>
   </div>
 </nav>
