--- a/templates/index.html
+++ b/templates/index.html
@@ -21,7 +21,7 @@
 
     {% include 'navbar.html' %}
     <div class="empty-space">
-        <!-- <button type="submit" id="add_board">add_board</button> -->
+        <button type="submit" id="add_board">+ Add New Board</button>
     </div>
     <div id="root">
     </div> 
