--- a/static/css/main.css
+++ b/static/css/main.css
@@ -11,9 +11,7 @@ a{
     text-decoration: none;
     color: rgb(0, 86, 152);
 }
-/* #boards {
-    background-color: green;
-} */
+
 .empty-space{
     background-color: rgb(0, 65, 135);
     height: 50px;
@@ -50,4 +48,7 @@ input{
 }
 .accordion{
     margin: 30px;
+}
+#add_board{
+    text-align: right;
 }
