--- a/templates/index.html
+++ b/templates/index.html
@@ -13,33 +13,18 @@
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3" crossorigin="anonymous"></script>
         <script type="module" src="{{ url_for('static', filename='js/main.js') }}" defer></script>
+        <script type="module" src="{{ url_for('static', filename='js/view/create_boards.js') }}" defer></script>
     </head>
+
+
     <body class="bg bg-dark">
 
     {% include 'navbar.html' %}
     <div class="empty-space">
-        <button type="submit" id="add_board">add_board</button>
+        <button type="submit" id="add_board">+ Add New Board</button>
     </div>
-    <div class="boards"></div>
-        {%for board in boards%}
-        <form action="/Show_board/{{board.title}}/{{board.id}}" >
-            <div class="board">
-                <div class="accordion " id="accordionFlushExample">
-                    <div class=" accordion-item">
-                        <h2 class="accordion-header" id="flush-headingOne">
-                            <button class=" accordion-button collapsed bg  bg-dark text-light" type="submit" data-bs-toggle="collapse"
-                                data-bs-target="#flush-collapseOne" aria-expanded="false" aria-controls="flush-collapseOne">
-                                {{board.title}}
-                            </button>
-                        </h2>    
-                    </div>      
-                </div> 
-            </div>
-        </form>
-        {%endfor%}
-    </div>
+    <div id="root">
+    </div> 
     </body>
 
-
-<script src="static\js\controller\create_boards.js"></script>
 </html>
