--- a/static/css/main.css
+++ b/static/css/main.css
@@ -1,62 +1,74 @@
-body{
+body {
     background-color: #2F3336;
     color: aliceblue;
 
 }
-h2{
+
+h2 {
     color: aliceblue;
     text-align: center;
 }
-a{
+
+a {
     text-decoration: none;
     color: rgb(0, 86, 152);
 }
 
-.empty-space{
+.empty-space {
     background-color: rgb(0, 65, 135);
     height: 50px;
     text-align: center;
 }
 
-.card{
+.card {
     min-height: 60px;
     min-width: 100px;
     margin: 3px;
 }
-#add_button{
+
+#add_button {
     background-color: #2F3336;
     color: aliceblue;
     border-radius: 10px;
     text-align: right;
 }
-textarea{
+
+textarea {
     min-height: 60px;
     min-width: 100px;
 }
-button{
+
+button {
     background-color: #2F3336;
     color: aliceblue;
     border-radius: 10px;
     margin-top: 5px;
 }
-input:disabled{
+
+input:disabled {
     color: black;
     background-color: white;
+    outline: none;
 }
-input{
+
+input {
     height: 60px;
     background-color: gray;
     color: white;
+    outline: none;
 }
-.accordion{
+
+.accordion {
     margin: 30px;
 }
-#add_board{
+
+#add_board {
     float: right;
     margin-top: 10px;
     margin-right: 10px;
 }
-.title_Board{
+
+.title_Board {
     height: 30px;
     width: 100px;
 
