--- a/templates/design.html
+++ b/templates/design.html
@@ -1,261 +1,13 @@
-
 <!-- Emmet: .board-container>section.board*3>.board-header>(span.board-title{Board $}+button.board-add{Add Card}+button.board-toggle>i.fas.fa-chevron-down)^.board-columns>((.board-column>.board-column-title{New}+.board-column-content>.card*5>(.card-remove>i.fas.fa-trash-alt^.card-title{Card $}))+(.board-column>.board-column-title{In Progress}+.board-column-content>.card*5>(.card-remove>i.fas.fa-trash-alt^.card-title{Card $}))+(.board-column>.board-column-title{Testing}+.board-column-content>.card*5>(.card-remove>i.fas.fa-trash-alt^.card-title{Card $}))+(.board-column>.board-column-title{Done}+.board-column-content>.card*5>(.card-remove>i.fas.fa-trash-alt^.card-title{Card $}))) -->
 
-<div class="board-container" id="root">
+<div class="board-container" >
     <div class="flex">
         <h1>ProMan</h1>
+    </div>
+    <div id="root">
+
+    </div>
+    <div class="flex">
         <button type="button" class="btn btn-outline-secondary" id="new-board-btn" style="text-align:right; margin:7px auto 7px auto;">+ Create New Board</button>
     </div>
-
-{#    <section class="board">#}
-{#        <div class="board-header"><span class="board-title">Board 1</span>#}
-{#            <button class="board-add">Add Card</button>#}
-{#            <button class="board-toggle"><i class="fas fa-chevron-down"></i></button>#}
-{#        </div>#}
-{#        <div class="board-columns">#}
-{#            <div class="board-column">#}
-{#                <div class="board-column-title">New</div>#}
-{#                <div class="board-column-content">#}
-{#                    <div class="card">#}
-{#                        <div class="card-remove"><i class="fas fa-trash-alt"></i></div>#}
-{#                        <div class="card-title">Card 1</div>#}
-{#                    </div>#}
-{#                    <div class="card">#}
-{#                        <div class="card-remove"><i class="fas fa-trash-alt"></i></div>#}
-{#                        <div class="card-title">Card 2</div>#}
-{#                    </div>#}
-{#                </div>#}
-{#            </div>#}
-{#            <div class="board-column">#}
-{#                <div class="board-column-title">In Progress</div>#}
-{#                <div class="board-column-content">#}
-{#                    <div class="card">#}
-{#                        <div class="card-remove"><i class="fas fa-trash-alt"></i></div>#}
-{#                        <div class="card-title">Card 1</div>#}
-{#                    </div>#}
-{#                </div>#}
-{#            </div>#}
-{#            <div class="board-column">#}
-{#                <div class="board-column-title">Testing</div>#}
-{#                <div class="board-column-content">#}
-{#                    <div class="card">#}
-{#                        <div class="card-remove"><i class="fas fa-trash-alt"></i></div>#}
-{#                        <div class="card-title">Card 1</div>#}
-{#                    </div>#}
-{#                    <div class="card">#}
-{#                        <div class="card-remove"><i class="fas fa-trash-alt"></i></div>#}
-{#                        <div class="card-title">Card 2</div>#}
-{#                    </div>#}
-{#                    <div class="card">#}
-{#                        <div class="card-remove"><i class="fas fa-trash-alt"></i></div>#}
-{#                        <div class="card-title">Card 3</div>#}
-{#                    </div>#}
-{#                    <div class="card">#}
-{#                        <div class="card-remove"><i class="fas fa-trash-alt"></i></div>#}
-{#                        <div class="card-title">Card 4</div>#}
-{#                    </div>#}
-{#                    <div class="card">#}
-{#                        <div class="card-remove"><i class="fas fa-trash-alt"></i></div>#}
-{#                        <div class="card-title">Card 5</div>#}
-{#                    </div>#}
-{#                </div>#}
-{#            </div>#}
-{#            <div class="board-column">#}
-{#                <div class="board-column-title">Done</div>#}
-{#                <div class="board-column-content">#}
-{#                    <div class="card">#}
-{#                        <div class="card-remove"><i class="fas fa-trash-alt"></i></div>#}
-{#                        <div class="card-title">Card 1</div>#}
-{#                    </div>#}
-{#                    <div class="card">#}
-{#                        <div class="card-remove"><i class="fas fa-trash-alt"></i></div>#}
-{#                        <div class="card-title">Card 2</div>#}
-{#                    </div>#}
-{#                    <div class="card">#}
-{#                        <div class="card-remove"><i class="fas fa-trash-alt"></i></div>#}
-{#                        <div class="card-title">Card 3</div>#}
-{#                    </div>#}
-{#                    <div class="card">#}
-{#                        <div class="card-remove"><i class="fas fa-trash-alt"></i></div>#}
-{#                        <div class="card-title">Card 4</div>#}
-{#                    </div>#}
-{#                    <div class="card">#}
-{#                        <div class="card-remove"><i class="fas fa-trash-alt"></i></div>#}
-{#                        <div class="card-title">Card 5</div>#}
-{#                    </div>#}
-{#                    <div class="card">#}
-{#                        <div class="card-remove"><i class="fas fa-trash-alt"></i></div>#}
-{#                        <div class="card-title">Card 6</div>#}
-{#                    </div>#}
-{#                </div>#}
-{#            </div>#}
-{#        </div>#}
-{#    </section>#}
-{#    <section class="board">#}
-{#        <div class="board-header"><span class="board-title">Board 2</span>#}
-{#            <button class="board-add">Add Card</button>#}
-{#            <button class="board-toggle"><i class="fas fa-chevron-down"></i></button>#}
-{#        </div>#}
-{#        <div class="board-columns">#}
-{#            <div class="board-column">#}
-{#                <div class="board-column-title">New</div>#}
-{#                <div class="board-column-content">#}
-{#                    <div class="card">#}
-{#                        <div class="card-remove"><i class="fas fa-trash-alt"></i></div>#}
-{#                        <div class="card-title">Card 1</div>#}
-{#                    </div>#}
-{#                    <div class="card">#}
-{#                        <div class="card-remove"><i class="fas fa-trash-alt"></i></div>#}
-{#                        <div class="card-title">Card 2</div>#}
-{#                    </div>#}
-{#                    <div class="card">#}
-{#                        <div class="card-remove"><i class="fas fa-trash-alt"></i></div>#}
-{#                        <div class="card-title">Card 3</div>#}
-{#                    </div>#}
-{#                    <div class="card">#}
-{#                        <div class="card-remove"><i class="fas fa-trash-alt"></i></div>#}
-{#                        <div class="card-title">Card 4</div>#}
-{#                    </div>#}
-{#                    <div class="card">#}
-{#                        <div class="card-remove"><i class="fas fa-trash-alt"></i></div>#}
-{#                        <div class="card-title">Card 5</div>#}
-{#                    </div>#}
-{#                </div>#}
-{#            </div>#}
-{#            <div class="board-column">#}
-{#                <div class="board-column-title">In Progress</div>#}
-{#                <div class="board-column-content"></div>#}
-{#            </div>#}
-{#            <div class="board-column">#}
-{#                <div class="board-column-title">Testing</div>#}
-{#                <div class="board-column-content">#}
-{#                    <div class="card">#}
-{#                        <div class="card-remove"><i class="fas fa-trash-alt"></i></div>#}
-{#                        <div class="card-title">Card 1</div>#}
-{#                    </div>#}
-{#                    <div class="card">#}
-{#                        <div class="card-remove"><i class="fas fa-trash-alt"></i></div>#}
-{#                        <div class="card-title">Card 2</div>#}
-{#                    </div>#}
-{#                </div>#}
-{#            </div>#}
-{#            <div class="board-column">#}
-{#                <div class="board-column-title">Done</div>#}
-{#                <div class="board-column-content">#}
-{#                    <div class="card">#}
-{#                        <div class="card-remove"><i class="fas fa-trash-alt"></i></div>#}
-{#                        <div class="card-title">Card 1</div>#}
-{#                    </div>#}
-{#                </div>#}
-{#            </div>#}
-{#        </div>#}
-{#    </section>#}
-{#    <section class="board">#}
-{#        <div class="board-header"><span class="board-title">Board 3</span>#}
-{#            <button class="board-add">Add Card</button>#}
-{#            <button class="board-toggle"><i class="fas fa-chevron-down"></i></button>#}
-{#        </div>#}
-{#        <div class="board-columns">#}
-{#            <div class="board-column">#}
-{#                <div class="board-column-title">New</div>#}
-{#                <div class="board-column-content">#}
-{#                    <div class="card">#}
-{#                        <div class="card-remove"><i class="fas fa-trash-alt"></i></div>#}
-{#                        <div class="card-title">Card 1</div>#}
-{#                    </div>#}
-{#                    <div class="card">#}
-{#                        <div class="card-remove"><i class="fas fa-trash-alt"></i></div>#}
-{#                        <div class="card-title">Card 2</div>#}
-{#                    </div>#}
-{#                    <div class="card">#}
-{#                        <div class="card-remove"><i class="fas fa-trash-alt"></i></div>#}
-{#                        <div class="card-title">Card 3</div>#}
-{#                    </div>#}
-{#                    <div class="card">#}
-{#                        <div class="card-remove"><i class="fas fa-trash-alt"></i></div>#}
-{#                        <div class="card-title">Card 4</div>#}
-{#                    </div>#}
-{#                    <div class="card">#}
-{#                        <div class="card-remove"><i class="fas fa-trash-alt"></i></div>#}
-{#                        <div class="card-title">Card 5</div>#}
-{#                    </div>#}
-{#                </div>#}
-{#            </div>#}
-{#            <div class="board-column">#}
-{#                <div class="board-column-title">In Progress</div>#}
-{#                <div class="board-column-content">#}
-{#                    <div class="card">#}
-{#                        <div class="card-remove"><i class="fas fa-trash-alt"></i></div>#}
-{#                        <div class="card-title">Card 1</div>#}
-{#                    </div>#}
-{#                    <div class="card">#}
-{#                        <div class="card-remove"><i class="fas fa-trash-alt"></i></div>#}
-{#                        <div class="card-title">Card 2</div>#}
-{#                    </div>#}
-{#                    <div class="card">#}
-{#                        <div class="card-remove"><i class="fas fa-trash-alt"></i></div>#}
-{#                        <div class="card-title">Card 3</div>#}
-{#                    </div>#}
-{#                    <div class="card">#}
-{#                        <div class="card-remove"><i class="fas fa-trash-alt"></i></div>#}
-{#                        <div class="card-title">Card 4</div>#}
-{#                    </div>#}
-{#                    <div class="card">#}
-{#                        <div class="card-remove"><i class="fas fa-trash-alt"></i></div>#}
-{#                        <div class="card-title">Card 5</div>#}
-{#                    </div>#}
-{#                </div>#}
-{#            </div>#}
-{#            <div class="board-column">#}
-{#                <div class="board-column-title">Testing</div>#}
-{#                <div class="board-column-content">#}
-{#                    <div class="card">#}
-{#                        <div class="card-remove"><i class="fas fa-trash-alt"></i></div>#}
-{#                        <div class="card-title">Card 1</div>#}
-{#                    </div>#}
-{#                    <div class="card">#}
-{#                        <div class="card-remove"><i class="fas fa-trash-alt"></i></div>#}
-{#                        <div class="card-title">Card 2</div>#}
-{#                    </div>#}
-{#                    <div class="card">#}
-{#                        <div class="card-remove"><i class="fas fa-trash-alt"></i></div>#}
-{#                        <div class="card-title">Card 3</div>#}
-{#                    </div>#}
-{#                    <div class="card">#}
-{#                        <div class="card-remove"><i class="fas fa-trash-alt"></i></div>#}
-{#                        <div class="card-title">Card 4</div>#}
-{#                    </div>#}
-{#                    <div class="card">#}
-{#                        <div class="card-remove"><i class="fas fa-trash-alt"></i></div>#}
-{#                        <div class="card-title">Card 5</div>#}
-{#                    </div>#}
-{#                </div>#}
-{#            </div>#}
-{#            <div class="board-column">#}
-{#                <div class="board-column-title">Done</div>#}
-{#                <div class="board-column-content">#}
-{#                    <div class="card">#}
-{#                        <div class="card-remove"><i class="fas fa-trash-alt"></i></div>#}
-{#                        <div class="card-title">Card 1</div>#}
-{#                    </div>#}
-{#                    <div class="card">#}
-{#                        <div class="card-remove"><i class="fas fa-trash-alt"></i></div>#}
-{#                        <div class="card-title">Card 2</div>#}
-{#                    </div>#}
-{#                    <div class="card">#}
-{#                        <div class="card-remove"><i class="fas fa-trash-alt"></i></div>#}
-{#                        <div class="card-title">Card 3</div>#}
-{#                    </div>#}
-{#                    <div class="card">#}
-{#                        <div class="card-remove"><i class="fas fa-trash-alt"></i></div>#}
-{#                        <div class="card-title">Card 4</div>#}
-{#                    </div>#}
-{#                    <div class="card">#}
-{#                        <div class="card-remove"><i class="fas fa-trash-alt"></i></div>#}
-{#                        <div class="card-title">Card 5</div>#}
-{#                    </div>#}
-{#                </div>#}
-{#            </div>#}
-{#        </div>#}
-{#    </section>#}
 </div>
