little refactor status

--- a/templates/index.html
+++ b/templates/index.html
@@ -24,7 +24,7 @@
         <button type="submit" id="add_board">+ Add New Board</button>
     </div>
     <div id="NewBoard"></div>
-    <div id="root">
+    <div id="root" data-status="0">
     </div> 
     </body>
 
